--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,3 +158,67 @@ body {
 .choice:hover {
     cursor: pointer;
 }
+
+/* score area */
+
+.score-board {
+    margin: 20px auto;
+    border: 3px solid: #040a84;
+    border-radius: 5px;
+    height:120px;
+    width: 300px;
+    text-align: center;
+    font-size: 32px;
+    padding: 30px 20px;
+    font-family: 'EB Garamont', sans-serif;
+    position: relative;
+    background-color: yellow;
+}
+
+#player-score {
+    color; rgb(2, 2, 98);
+    text-align: center;
+    font-size: 45px;
+    padding: 30px 20px;
+}
+
+#computer-score {
+    color: rgb(2, 2, 98);
+    text-align: center;
+    font-size: 45px;
+    padding: 30px 20px;
+}
+
+.badge {
+    background-color: rgba(3, 7, 85, 0.692);
+    padding: 2px 10px;
+}
+
+#player-label {
+    position: absolute;
+    top: 30px;
+    left: -60px;
+    color: white;
+    background-color: rgb(5, 5, 120);
+}
+
+#computer-label {
+    position: absolute;
+    top: 30px;
+    right: -80px;
+    color: white;
+    background-color: rgb(5, 5, 120);
+}
+.green-glow {
+    border: 4px solid rgb(9, 128, 0);
+    box-shadow: 0 0 40px rgb(1, 255, 22);
+}
+
+.red-glow {
+    border: 4px solid rgb(247, 4, 4);
+    box-shadow: 0 0 40px rgb(255, 48, 48);
+}
+.yellow-glow {
+    border: 4px solid rgb(246, 234, 11);
+    box-shadow: 0 0 40px rgba(255, 247, 0, 0.404);
+}
