--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,3 +222,276 @@ body {
     border: 4px solid rgb(246, 234, 11);
     box-shadow: 0 0 40px rgba(255, 247, 0, 0.404);
 }
+
+ /* set the time area */
+ .resulttime {
+    font-size: 40px;
+    color: white;
+}
+.resulttime > p {
+    text-align: center;
+    padding: 50px;
+}
+#messages {
+    font-size: 2rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-size: 2rem;
+    text-align: center;
+}
+#reset-game {
+    font-size: 2rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-size: 2rem;
+    text-align: center;
+    color: rgb(2, 2, 91);
+    background-color: yellow;
+    width: 500px;
+    margin: 0 auto;
+}
+
+#timer {
+    margin-bottom: 25px;
+    font-size: 2rem;
+    font-weight: bold;
+    color: #7CFC00;
+}
+
+.button-container {
+    text-align: center;
+    padding-top:30px;
+    width: 500px;
+    margin: 0 auto;
+}
+.question {
+    font-size: 25px;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    color: rgb(4, 53, 137);
+    background-color: yellow;
+    width: 500px;
+    padding: 5px;
+    display:block;
+}
+.set {
+    font-size: 25px;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    color: rgb(4, 53, 137);
+    background-color: #00ff91;
+    width: 500px;
+    padding: 5px;
+    display: block;
+}
+
+.timer-button {
+    font-family: 'EB Garamont', serif;
+    margin: 1.5rem;
+    background-color: #00ff91;
+    font-size: 25px;
+    color: rgb(4, 53, 137);
+    width: 200px;
+    height: 80px;
+    cursor: pointer;
+    box-shadow: 3px 3px #A3ACBD, 2px 2px #A3ACBD, 1px 1px #A3ACBD;
+    padding: 10px;
+}
+/* Responsive layout for screens, smaller than 600 px */
+
+@media (max-width: 600px) {
+
+    #open {
+        font-family: 'EB Garamont', serif;
+        margin: -2rem;
+        background-color: #00ff91;
+        font-size: 1.3rem;
+        font-weight: bold;
+        width: 200px;
+        height: 40px;
+        color: #040a84;
+        cursor: pointer;
+        box-shadow: 3px 3px #A3ACBD, 2px 2px #A3ACBD, 1px 1px #A3ACBD;
+        padding: 10px;
+        text-align: center;
+    }
+    
+    .rules-header {
+        background-color: #00ff91;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #262223;
+        width: 60%;
+    }
+    .rules-content {
+        background-color: white;
+        margin: 0 auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 60%;
+        height: auto;
+    }
+    .rules-content > h4 {
+        font-size: 20px;
+        letter-spacing: 10px;
+        padding-bottom: 10px;
+    }
+    .rules-content > p {
+        line-height: 25px;
+        font-size: 11px;
+    }
+
+    /* "Start-the-action" area */
+    #play-action {
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        color: rgb(3, 23, 122);
+        font-size: 20px;
+        font-weight: bold;
+        font-family: 'EB Garamont', serif;
+        background-color: #00ff91;
+
+    }
+    
+    /* "play-choice" area */
+
+    .choices {
+        text-align: center;
+        margin: 50px 0;   
+    
+    }
+
+    .choice {
+        display: inline-block;
+        padding:20px;
+    }
+
+    /* Score area**/
+
+    .score-board {
+        margin: 20px auto;
+        border: 3px solid: #040a84;
+        border-radius: 5px;
+        height: 80px;px;
+        width: 240px;
+        text-align: center;
+        font-size: 26px;
+        padding: 20px 10px;
+        font-family: 'EB Garamont', sans-serif;
+        position: relative;
+        background-color: yellow;
+    }
+
+    .badge {
+        background-color: rgba(3, 7, 85, 0.692);
+        padding: 2px;
+    }
+
+    #player-label {
+        position: absolute;
+        top: 18px;
+        left: -5px;
+        color: white;
+        background-color: rgb(5, 5, 120);
+    }
+
+    #computer-label {
+        position: absolute;
+        top: 20px;
+        right: -5px;
+        color: white;
+        background-color: rgb(5, 5, 120);
+    }
+
+    #player-score {
+        color; rgb(2, 2, 98);
+        text-align: center;
+        font-size: 25px;
+        padding: 8px;
+        font-weight: bold;
+    }
+    #computer-score {
+        color: rgb(2, 2, 98);
+        text-align: center;
+        font-size: 25px;
+        padding: 8px;
+        font-weight: bold;
+    }
+
+    /* set the time area */
+    .resulttime {
+        font-size: 40px;
+        color: white;
+    }
+    .resulttime > p {
+        text-align: center;
+        padding: 50px;
+    }
+    #messages {
+        font-size: 2rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+        font-size: 1.8rem;
+        text-align: center;
+    }
+    #reset-game {
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+        font-size: 1.8rem;
+        text-align: center;
+        color: rgb(2, 2, 91);
+        background-color: yellow;
+        width: 250px;
+        margin: 0 auto;
+    }
+
+    #timer {
+        margin-bottom: 25px;
+        font-size: 1.8rem;
+        font-weight: bold;
+        color: #7CFC00;
+    }
+
+    .button-container {
+        text-align: center;
+        padding-top:30px;
+        width: 250px;
+        margin: 0 auto;
+    }
+    .question {
+        font-size: 1.6rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+        color: rgb(4, 53, 137);
+        background-color: yellow;
+        width: 250px;
+        padding: 5px;
+        margin: 0 auto;
+        display: inline-block;
+    }
+      
+    .set {
+        font-size: 25px;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+        color: rgb(4, 53, 137);
+        background-color: #00ff91;
+        width: 250px;
+        padding: 5px;
+        display: block;
+    }
+    .timer-button {
+        font-family: 'EB Garamont', serif;
+        margin: 1.5rem;
+        background-color: #00ff91;
+        font-size: 1.5rem;
+        color: #262223;
+        width: 200px;
+        height: 80px;
+        cursor: pointer;
+        box-shadow: 3px 3px #A3ACBD, 2px 2px #A3ACBD, 1px 1px #A3ACBD;
+        padding: 10px;
+        margin: 30px auto;
+    }
+}
